[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Themes/Main.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Imagens/send.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Chat.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.278431, 0.282353, 0.333333, 1 )
border_color = Color( 0.529412, 0.560784, 0.615686, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.529412, 0.560784, 0.615686, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.146255, 0.148364, 0.175781, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Ui" type="Control" parent="."]
anchor_left = 0.0194444
anchor_top = 0.0195313
anchor_right = 0.980556
anchor_bottom = 0.980469
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Vbox" type="VBoxContainer" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Chat" type="PanelContainer" parent="Ui/Vbox"]
self_modulate = Color( 0.529412, 0.560784, 0.615686, 1 )
margin_right = 692.0
margin_bottom = 1121.0
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Ui/Vbox/Chat"]
margin_right = 692.0
margin_bottom = 1121.0

[node name="message" type="VBoxContainer" parent="Ui/Vbox/Chat/Scroll"]
margin_right = 692.0
size_flags_horizontal = 3

[node name="Hs" type="HSeparator" parent="Ui/Vbox"]
margin_top = 1125.0
margin_right = 692.0
margin_bottom = 1152.0
custom_constants/separation = 27

[node name="Hbox" type="HBoxContainer" parent="Ui/Vbox"]
margin_top = 1156.0
margin_right = 692.0
margin_bottom = 1230.0

[node name="Message" type="LineEdit" parent="Ui/Vbox/Hbox"]
margin_right = 614.0
margin_bottom = 74.0
size_flags_horizontal = 3
max_length = 255
placeholder_text = "mensagem"

[node name="Send" type="Button" parent="Ui/Vbox/Hbox"]
margin_left = 618.0
margin_right = 692.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 74 )
custom_colors/icon_color_normal = Color( 0.278431, 0.282353, 0.333333, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 2 )
expand_icon = true

[node name="Virtual" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.0736111
anchor_top = 0.391406
anchor_right = 0.926389
anchor_bottom = 0.475781
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Virtual_keyboard" type="LineEdit" parent="Virtual"]
margin_right = 536.0
margin_bottom = 108.0
size_flags_horizontal = 3
max_length = 255
placeholder_text = "mensagem"

[node name="Send" type="Button" parent="Virtual"]
margin_left = 540.0
margin_right = 614.0
margin_bottom = 108.0
rect_min_size = Vector2( 74, 74 )
custom_colors/icon_color_normal = Color( 0.278431, 0.282353, 0.333333, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 2 )
expand_icon = true

[connection signal="focus_entered" from="Ui/Vbox/Hbox/Message" to="." method="_on_Message_focus_entered"]
[connection signal="focus_exited" from="Ui/Vbox/Hbox/Message" to="." method="_on_Message_focus_exited"]
[connection signal="text_changed" from="Ui/Vbox/Hbox/Message" to="." method="_on_Message_text_changed"]
[connection signal="pressed" from="Ui/Vbox/Hbox/Send" to="." method="_on_Send_pressed"]
[connection signal="focus_entered" from="Virtual/Virtual_keyboard" to="." method="_on_Message_focus_entered"]
[connection signal="focus_exited" from="Virtual/Virtual_keyboard" to="." method="_on_Message_focus_exited"]
[connection signal="text_changed" from="Virtual/Virtual_keyboard" to="." method="_on_Message_text_changed"]
[connection signal="pressed" from="Virtual/Send" to="." method="_on_Send_pressed"]
